[package]
name = "m-tunnel-rust"
version = "1.0.0"
authors = ["Muffaddal Kalla <mufkuw@gmail.com>"]
edition = "2021"
description = "A Rust-based SSH tunnel utility for forward and reverse port forwarding"
license = "MIT"
repository = "https://github.com/mufkuw/m-tunnel-rust"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11.8"
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
parking_lot = "0.12"
warp = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[features]
default = ["metrics"]
metrics = ["warp"]


[package.metadata.deb]
maintainer = "Muffadal Kalla <mufkuw@gmail.com>"
description = "SSH-based tunneling utility"
depends = "openssh-client"
assets = [
    ["target/release/m-tunnel", "usr/bin/", "755"],
    ["m-tunnel.conf", "etc/m-tunnel/", "644"],
    [".env", "etc/m-tunnel/", "600"],
]