[package]
name = "m-tunnel"
version = "1.0.0"
authors = ["Muffaddal Kalla <mufkuw@gmail.com>"]
edition = "2021"
description = "A Rust-based tunnel utility"

[[bin]]
name = "m-tunnel"
path = "src/main.rs"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11.8"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
warp = { version = "0.3", optional = true }

[features]
default = ["metrics"]
metrics = ["warp"]